# cmstd

./: .clang-format  .gitignore  CMakeLists.txt  TODO.txt
lib/Bool/: Bool.h
lib/LinkedList/: LinkedList.c  LinkedList.h
lib/Macros/: Macros.h
lib/Node/: Node.c  Node.h  NodeTest.c
lib/PrimitiveTypes/: PrimitiveTypes.h
lib/Queue/: Queue.c  Queue.h  QueueTest.c
lib/Result/: Result.c  Result.h  ResultTest.c
lib/Stack/: Stack.c  Stack.h
lib/String/: String.c  String.h  StringTest.c
